<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.distributed.distributed2017androidapp.MainActivity"
    android:weightSum="1">

    <Switch
        android:id="@+id/select_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="12sp"
        android:text="@string/Switch_LatLng"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartLat"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/startlat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextrect"
        android:elevation="2dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/DefaultStartLat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/StartLon"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/startlon"
        android:text="@string/DefaultStartLon"
        android:layout_width="match_parent"
        android:elevation="2dp"
        android:background="@drawable/edittextrect"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/EndLat"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/endlat"
        android:text="@string/DefaultEndLat"
        android:layout_width="match_parent"
        android:elevation="2dp"
        android:background="@drawable/edittextrect"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:textColor="@color/colorPrimary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndLon" />

    <EditText
        android:id="@+id/endlon"
        android:text="@string/DefaultEndLon"
        android:layout_width="match_parent"
        android:elevation="2dp"
        android:background="@drawable/edittextrect"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GetDirs"
        android:text="@string/GetDirs"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorPrimary"
        android:layout_weight="0.35" />

</LinearLayout>
